--- a/sk8.css
+++ b/sk8.css
@@ -12,6 +12,7 @@ section {
 
 /*Social buttons*/
 header {
+  margin-top: 10px;
   width: 100%;
   display: inline-block; }
 
@@ -20,6 +21,10 @@ nav {
   margin: auto;
   display: inline-block;
   text-align: right; }
+
+ul {
+  margin: 0;
+  padding: 0; }
 
 .button {
   font-family: Arial;
@@ -31,7 +36,7 @@ nav {
 span {
   width: 100%;
   display: block;
-  margin: 0 auto; }
+  margin-bottom: 10px; }
 
 .news {
   display: inline-block;
@@ -41,7 +46,7 @@ span {
   font-family: Arial;
   font-size: 18px;
   color: white;
-  width: 23%;
+  width: 24.45%;
   display: inline-block;
   background-color: red;
   border: 1px solid red; }
@@ -57,21 +62,34 @@ span {
 /*3 Article boxes*/
 .big-box {
   width: 100%;
+  height: 400px;
   display: block;
   margin: 0;
   padding: 0; }
 
-.box {
+.box1, .box2, .box3 {
+  padding: 0 20px 0 20px;
   display: inline-block;
+  width: 27.8%;
+  vertical-align: top;
   background: white;
-  width: 31.9%;
   font: 'Helvetica', Arial, sans-serif;
+  margin: 20px 5px 5px 5px; }
+
+.box1 {
   color: black;
-  font-size: 10px;
-  margin: 5px; }
+  font-size: 10px; }
+
+.box2 {
+  color: black;
+  font-size: 10px; }
+
+.box3 {
+  color: black;
+  font-size: 10px; }
 
 h3 {
-  font-size: 22px;
+  font-size: 21px;
   color: black;
   font-family: Arial, sans-serif;
   text-align: left;
@@ -87,15 +105,17 @@ h4 {
   padding: 0 auto; }
 
 p {
-  font-size: 12px;
+  line-height: 2em;
+  font-size: 11px;
   color: black;
   text-align: left;
   font-family: 'Helvetica', Arial, sans-serif;
-  padding: 20px; }
-  p .tag {
-    width: 100%;
-    color: red;
-    text-align: center; }
+  padding: 10px; }
+
+.tag {
+  width: 100%;
+  color: red;
+  text-align: center; }
 
 /* Arrow tag */
 .arrow {
@@ -109,38 +129,83 @@ p {
   height: 700px;
   margin-left: auto;
   margin-right: auto; }
-  .flex-container ul {
-    position: absolute;
-    display: block;
-    margin: 0 auto;
-    padding: 0 auto;
-    width: 100%;
-    height: 100%; }
-    .flex-container ul .item1 {
-      display: inline-block;
-      background-repeat: no-repeat;
-      background-image: url("images/sk8er-4.png");
-      width: 30%;
-      height: 50%; }
-    .flex-container ul .item2 {
-      display: inline-block;
-      background-repeat: no-repeat;
-      background-image: url("images/sk8er-3.png");
-      width: 30%;
-      height: 50%; }
-    .flex-container ul .item3 {
-      background-repeat: no-repeat;
-      background-image: url("images/sk8er-1.png");
-      width: 60%;
-      height: 50%; }
-    .flex-container ul .item4 {
-      background-repeat: no-repeat;
-      display: inline-block;
-      background-image: url("images/sk8er-2.png");
-      width: 30%;
-      height: 100%; }
-    .flex-container ul .name {
-      color: white;
-      font-family: 'Helvetica', Arial, sans-serif;
-      font-size: 30px;
-      text-align: center; }
+  .flex-container .item1 {
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-image: url("images/sk8er-4.png");
+    width: 30%;
+    height: 50%; }
+  .flex-container .item2 {
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-image: url("images/sk8er-3.png");
+    width: 30%;
+    height: 50%; }
+  .flex-container .item3 {
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-image: url("images/sk8er-1.png");
+    width: 60%;
+    height: 50%; }
+
+.item4 {
+  background-repeat: no-repeat;
+  display: inline-block;
+  background-image: url("images/sk8er-2.png");
+  width: 30%;
+  height: 100%; }
+
+.name {
+  color: white;
+  font-family: 'Helvetica', Arial, sans-serif;
+  font-size: 30px;
+  text-align: center; }
+
+.sktbds {
+  width: 50%;
+  margin: 30px auto 30px auto;
+  height: 300px;
+  text-decoration: none;
+  background: white; }
+
+.boards {
+  display: inline-block;
+  padding: 15px 14px;
+  height: 200px; }
+
+footer {
+  padding: 10px;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 200px;
+  background: white; }
+
+.details {
+  width: 50%; }
+
+h5 {
+  font-family: 'Helvetica', Arial, sans-serif;
+  font-size: 12px; }
+
+.information {
+  font-family: 'Helvetica' Arial, sans-serif;
+  font-size: 10px; }
+
+.fill-in {
+  width: 50%;
+  float: right; }
+
+.form {
+  float: left; }
+
+.submit {
+  vertical-align: center;
+  width: 20%;
+  height: 5px;
+  font: Arial;
+  font-size: 10px;
+  color: white;
+  background-color: red;
+  text-align: center;
+  margin-left: 75%; }
